styles/tippy.css
:root {
    --tippy-border-radius: 12px;
    --tippy-color: rgba(0, 0, 0, 0.553);
    --tippy-text-color: #ffffff;
}

.tippy-box {
    background-color: var(--tippy-color);
    border-radius: var(--tippy-border-radius);
    backdrop-filter: var(--frosted-glass-blur);
    padding: 4px 8px;
    border: var(--outline);
    box-shadow: var(--shadow);
}

.tippy-box[data-theme="white"] {
    background-color: white;
    color: black;
}

.tippy-box[data-theme="transparent"] {
    background-color: rgba(255, 255, 255, 0);
    color: black;
}

.tippy-box[data-theme="white"] .tippy-arrow {
    color: white;
}

.tippy-box[data-theme="transparent"] .tippy-arrow {
    color: rgba(255, 255, 255, 0);
}


.tippy-box[data-theme="suggestion"] {
    background-color: transparent;
    padding: 0;
    border-radius: 0;
}

.tippy-box[data-theme="premium"] {
    background: linear-gradient(45deg, #fd03ff, #0097e6);
    padding: 10px 20px;
    color: white;
    border-radius: 12px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    box-shadow: var(--shadow);
    border: var(--outline);
    border: 0;
}

.tippy-box[data-theme="premium"] .tippy-arrow {
    color: #8C45F4;
}

.tippy-box[data-theme="pixelsplace_dropdown"] {
    background: var(--frosted-glass);
    backdrop-filter: var(--frosted-glass-blur);
    border-radius: 12px;
    user-select: none;
    cursor: pointer;
    transition: var(--smooth-transition);
    box-shadow: var(--shadow);
    padding: 0;

    .tippy-content > * {
        display: flex;
        flex-direction: column;
        align-items: stretch;
        overflow: hidden;
        border-radius: 12px;

        > *:not(div[data-tippy-root]) {
            padding: 8px;
            border-radius: 0px;
            background-color: rgba(255, 255, 255, 0);
            transition: var(--smooth-transition);
            color: var(--color-text);
            display: flex;
            justify-content: space-between;
            flex-grow: 1;
            align-items: center;
            flex-direction: row;
            gap: 8px;

            span {
                color: var(--color-text);
            }
        }

        > :not(div[data-tippy-root]):hover {
            background-color: var(--hover-color, rgb(228, 228, 228));
            span {
                color: var(--hover-color-text, var(--color-text));
            }
        }
    }
}

.tippy-arrow {
    color: var(--tippy-color);
    height: 25px !important;
    backdrop-filter: var(--frosted-glass-blur);
}

.tippy-content {
    padding: 0;
}

